kubernetes/dns/pihole/pihole-middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pihole-redirect-to-admin
  namespace: dns
spec:
  redirectRegex:
    regex: "^https://(pihole.bas|dns.bas)/$"
    replacement: "https://${1}/admin/"
    permanent: true

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-pihole
  namespace: dns
spec:
  forwardAuth:
    address: http://authentik.security.svc.cluster.local:9000/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    authResponseHeaders:
      - X-Forwarded-User
      - X-authentik-username
      - X-authentik-email
      - X-authentik-groups
      - X-authentik-uid
      - X-authentik-name
      - Authorization
    authRequestHeaders:
      - X-Forwarded-Method
      - X-Forwarded-Proto
      - X-Forwarded-Host
      - X-Forwarded-Uri
      - Cookie
